--- a/style/_scss/_tabs.scss
+++ b/style/_scss/_tabs.scss
@@ -1,6 +1,3 @@
-// TABS
-
-
 // TAB LIST
 .tabs .tablist ul {
   position: relative;
@@ -13,22 +10,35 @@
     padding: 0;
 
     button {
-      border-color: $color--action-light;
+      border: 0;
       border-radius: 0;
-      border-width: 0 0 1px;
       text-transform: none;
       color: $color--action-light;
       background-color: transparent;
 
+      &:after {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: $color--action-light;
+        content: "";
+        @include transition(height);
+      }
+
       &:hover,
       &:focus {
-        border-color: $color--action-light-hover;
-        border-width: 0 0 4px;
-        color: $color--action-light-hover;
+        &:after {
+          height: 4px;
+        }
       }
 
       &.is-active {
-        border-width: 0 0 4px;
+        &:after {
+          height: 4px;
+        }
       }
     }
   }
@@ -64,16 +74,15 @@
 
 
 // TAB DARK MODE
-.tabs .tablist ul {
-  li {
-    button {
-      border-color: $color--action-dark;
-      color: $color--action-dark;
+html.dark {
+  .tabs .tablist ul {
+    li {
+      button {
+        color: $color--action-dark;
 
-      &:hover,
-      &:focus {
-        border-color: $color--action-dark-hover;
-        color: $color--action-dark-hover;
+        &:after {
+          background-color: $color--action-dark;
+        }
       }
     }
   }
