--- a/style/_scss/_tabs.scss
+++ b/style/_scss/_tabs.scss
@@ -81,6 +81,32 @@
     display: flex;
     flex-direction: column;
     padding-right: $spacing-8;
+
+    li {
+      button {
+        &:after {
+          top: 0;
+          right: 0;
+          left: auto;
+          width: 1px;
+          height: 100%;
+          @include transition(width);
+        }
+
+        &:hover,
+        &:focus {
+          &:after {
+            width: 4px;
+          }
+        }
+
+        &.is-active {
+          &:after {
+            width: 4px;
+          }
+        }
+      }
+    }
   }
 }
 
