--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -437,6 +437,18 @@ select {
   border: 1px solid var(--color--border);
   border-radius: var(--border-radius-sm);
 }
+select:after {
+  display: grid;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 2rem;
+  height: 2rem;
+  padding: var(--spacing--8);
+  background-image: url(../assets/icons/ui/chevron-down-border.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 select option {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -448,6 +460,7 @@ select option {
 
 .select-icon {
   display: grid;
+  display: none;
   position: absolute;
   top: 1.75rem;
   right: var(--spacing--8);
@@ -1506,8 +1519,12 @@ nav ul li:last-of-type {
     line-height: 1;
   }
 }
+.tabs {
+  padding: var(--spacing--16) 0 0;
+}
 .tabs .tablist ul {
   position: relative;
+  border-bottom: 1px solid var(--color--action-light);
   list-style-type: none;
 }
 .tabs .tablist ul li {
@@ -1517,6 +1534,7 @@ nav ul li:last-of-type {
   padding: 0;
 }
 .tabs .tablist ul li button {
+  margin: 0;
   border: 0;
   border-radius: 0;
   text-transform: none;
@@ -1529,7 +1547,7 @@ nav ul li:last-of-type {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 0;
   background-color: var(--color--action-light);
   content: "";
   transition: height 0.25s ease 0s;
@@ -1549,7 +1567,7 @@ nav ul li:last-of-type {
   max-width: 100%;
   overflow: hidden;
   margin: 0;
-  padding: var(--spacing--8) 0 0;
+  padding: var(--spacing--16) 0 0;
 }
 .tabs .panels .panel {
   max-width: 0;
@@ -1571,13 +1589,18 @@ nav ul li:last-of-type {
 .tabs.vertical .tablist ul {
   display: flex;
   flex-direction: column;
-  padding-right: var(--spacing--8);
+  align-items: flex-end;
+  border-bottom: 0;
+  border-right: 1px solid var(--color--action-light);
+}
+.tabs.vertical .tablist ul li button {
+  padding: var(--spacing--16);
 }
 .tabs.vertical .tablist ul li button:after {
   top: 0;
   right: 0;
   left: auto;
-  width: 1px;
+  width: 0;
   height: 100%;
   transition: width 0.25s ease 0s;
 }
@@ -1587,7 +1610,13 @@ nav ul li:last-of-type {
 .tabs.vertical .tablist ul li button.is-active:after {
   width: 4px;
 }
+.tabs.vertical .panels {
+  padding: 0 0 0 var(--spacing--16);
+}
 
+html.dark .tabs .tablist ul {
+  border-color: var(--color--action-dark);
+}
 html.dark .tabs .tablist ul li button {
   color: var(--color--action-dark);
 }
