--- a/style/_scss/_tabs.scss
+++ b/style/_scss/_tabs.scss
@@ -1,43 +1,49 @@
 // TAB LIST
-.tabs .tablist ul {
-  position: relative;
-  list-style-type: none;
+.tabs {
+  padding: $spacing-16 0 0;
 
-  li {
-    display: inline-block;
-    width: auto;
-    margin: 0;
-    padding: 0;
+  .tablist ul {
+    position: relative;
+    border-bottom: 1px solid $color--action-light;
+    list-style-type: none;
 
-    button {
-      border: 0;
-      border-radius: 0;
-      text-transform: none;
-      color: $color--action-light;
-      background-color: transparent;
+    li {
+      display: inline-block;
+      width: auto;
+      margin: 0;
+      padding: 0;
 
-      &:after {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: $color--action-light;
-        content: "";
-        @include transition(height);
-      }
+      button {
+        margin: 0;
+        border: 0;
+        border-radius: 0;
+        text-transform: none;
+        color: $color--action-light;
+        background-color: transparent;
 
-      &:hover,
-      &:focus {
         &:after {
-          height: 4px;
+          display: block;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 0;
+          background-color: $color--action-light;
+          content: "";
+          @include transition(height);
         }
-      }
 
-      &.is-active {
-        &:after {
-          height: 4px;
+        &:hover,
+        &:focus {
+          &:after {
+            height: 4px;
+          }
+        }
+
+        &.is-active {
+          &:after {
+            height: 4px;
+          }
         }
       }
     }
@@ -54,7 +60,7 @@
   max-width: 100%;
   overflow: hidden;
   margin: 0;
-  padding: $spacing-8 0 0;
+  padding: $spacing-16 0 0;
 
   .panel {
     max-width: 0;
@@ -80,15 +86,19 @@
   .tablist ul {
     display: flex;
     flex-direction: column;
-    padding-right: $spacing-8;
+    align-items: flex-end;
+    border-bottom: 0;
+    border-right: 1px solid $color--action-light;
 
     li {
       button {
+        padding: $spacing-16;
+
         &:after {
           top: 0;
           right: 0;
           left: auto;
-          width: 1px;
+          width: 0;
           height: 100%;
           @include transition(width);
         }
@@ -108,12 +118,18 @@
       }
     }
   }
+
+  .panels {
+    padding: 0 0 0 $spacing-16;
+  }
 }
 
 
 // TAB DARK MODE
 html.dark {
   .tabs .tablist ul {
+    border-color: $color--action-dark;
+
     li {
       button {
         color: $color--action-dark;
