--- a/style/master.css
+++ b/style/master.css
@@ -1522,6 +1522,7 @@ nav ul li:last-of-type {
   padding: var(--spacing--16) 0 0;
 }
 .tabs .tablist ul {
+  display: flex;
   position: relative;
   border-bottom: 1px solid var(--color--action-light);
   list-style-type: none;
